--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "microservices-cert-project",
 	"author": "Mariano Hernandez",
 	"description": "First app for FCC API and Microservices Certification",
+	"keywords" : ["freecodecamp", "Certification", "basic", "learning"],
 	"dependencies": {
 		"express": "^4.14.0"
 	},
