--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"author": "Mariano Hernandez",
 	"description": "First app for FCC API and Microservices Certification",
 	"keywords" : ["freecodecamp", "Certification", "basic", "learning"],
+	"license": "MIT",
 	"dependencies": {
 		"express": "^4.14.0"
 	},
